# cmake_training

./: LICENSE  README.md  leo-notes.txt
ex1/: CMakeLists.txt  README.md
ex2/: CMakeLists.txt  README.md  callMyLibrary.py  myLibrary.c
ex3/: CMakeLists.txt  README.md  myCxxMain.cxx  myFortranLib.f90
ex4/: CMakeLists.txt  README.md  ex4.cxx
ex5/: CMakeLists.txt  README.md  omp_hello.c
ex6/: CMakeLists.txt  README.md  ex6.cxx
ex6/src/: CMakeLists.txt
ex7/: CMakeLists.txt  README.md  cxx_wrapper.sh.in
ex8/: CMakeLists.txt  README.md
ex9/: CMakeLists.txt  README.md
